--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,33 +10,69 @@
 
     <application
         android:allowBackup="true"
-        android:label="@string/app_name"
+
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
         <!-- Login,Reset,Reg Activities -->
-        <activity android:name=".user_login" android:theme="@style/AppTheme.NoActionBar" />
         <activity
+            android:label="@string/user_login_title"
+            android:name=".user_login"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:label="@string/user_passreset_title"
+
+            android:screenOrientation="portrait"
             android:name=".user_password_reset"
             android:parentActivityName=".user_login" />
-        <activity android:name=".user_register" /> <!-- Passenger Activities -->
-        <activity android:name=".Passenger" />
-        <activity android:name=".MyBookings" />
-        <activity android:name=".passenger_profile" />
-        <activity android:name=".Ratings" />
         <activity
+            android:label="@string/userr_register_title"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:name=".user_register"
+            android:screenOrientation="portrait"
+            /> <!-- Passenger Activities -->
+        <activity
+            android:name=".Passenger"
+            android:label="@string/passenger_dash"
+            />
+        <activity
+            android:label="@string/passenger_bookings"
+            android:name=".MyBookings"
+            />
+        <activity
+            android:label="@string/passenger_prof"
+            android:name=".passenger_profile"
+            />
+
+        <activity
+            android:name=".Ratings"
+            android:label="@string/rate_us"
+            android:parentActivityName=".Passenger" />
+        <activity
+            android:screenOrientation="portrait"
             android:name=".BookBus"
-            android:label="@string/search" />
+            android:label="@string/search"
+            android:parentActivityName=".Passenger"
+            />
         <activity
+            android:parentActivityName=".BookBus"
+            android:screenOrientation="portrait"
             android:name=".BusList"
             android:label="@string/busList" />
         <activity
+            android:parentActivityName=".BusList"
+            android:screenOrientation="portrait"
             android:name=".SelectSeat"
             android:label="@string/seatNo" />
         <activity
+            android:parentActivityName=".SelectSeat"
+            android:screenOrientation="portrait"
             android:name=".PayNow"
             android:label="@string/payforticket" />
         <activity
+            android:parentActivityName=".PayNow"
+            android:screenOrientation="portrait"
             android:name=".CreditCardPay"
             android:label="@string/crecardDetails" /> <!-- Admin Activities -->
         <activity
@@ -97,6 +133,8 @@
             android:label="@string/driver_update_route"
             android:parentActivityName=".My_route" /> <!-- Wecome Login Screen -->
         <activity
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
             android:name=".welcome_spalsh"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
