--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,88 +2,80 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.bussapp">
 
-    <supports-screens
-        android:largeScreens="true"
-        android:normalScreens="true"
-        android:smallScreens="true"
-        android:xlargeScreens="true" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/icon"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".admin_add_route"
+            android:label="@string/admin_add_route"
+            android:parentActivityName=".admin_routes"
+
+            />
 
         <!-- Login,Reset,Reg Activities -->
         <activity
-            android:label="@string/user_login_title"
             android:name=".user_login"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:screenOrientation="portrait"/>
-        <activity
-            android:label="@string/user_passreset_title"
-
+            android:label="@string/user_login_title"
             android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
             android:name=".user_password_reset"
-            android:parentActivityName=".user_login" />
+            android:label="@string/user_passreset_title"
+            android:parentActivityName=".user_login"
+            android:screenOrientation="portrait" />
         <activity
-            android:label="@string/userr_register_title"
-            android:theme="@style/AppTheme.NoActionBar"
             android:name=".user_register"
+            android:label="@string/userr_register_title"
             android:screenOrientation="portrait"
-            />
-        <!-- Passenger Activities -->
+            android:theme="@style/AppTheme.NoActionBar" /> <!-- Passenger Activities -->
         <activity
             android:name=".Passenger"
-            android:label="@string/passenger_dash"
-            />
+            android:label="@string/passenger_dash" />
         <activity
-            android:label="@string/mybookingsde"
             android:name=".MyBookings"
+            android:label="@string/mybookingsde"
             android:parentActivityName=".Passenger" />
-
-
         <activity
-            android:label="@string/passenger_prof"
             android:name=".passenger_profile"
+            android:label="@string/passenger_prof"
             android:parentActivityName=".Passenger" />
-
-
         <activity
             android:name=".Ratings"
             android:label="@string/rate_us"
             android:parentActivityName=".Passenger" />
         <activity
-            android:screenOrientation="portrait"
             android:name=".BookBus"
             android:label="@string/search"
             android:parentActivityName=".Passenger"
-            />
+            android:screenOrientation="portrait" />
         <activity
-            android:parentActivityName=".BookBus"
-            android:screenOrientation="portrait"
             android:name=".BusList"
-            android:label="@string/busList" />
+            android:label="@string/busList"
+            android:parentActivityName=".BookBus"
+            android:screenOrientation="portrait" />
         <activity
-            android:parentActivityName=".BusList"
-            android:screenOrientation="portrait"
             android:name=".SelectSeat"
-            android:label="@string/seatNo" />
+            android:label="@string/seatNo"
+            android:parentActivityName=".BusList"
+            android:screenOrientation="portrait" />
         <activity
-            android:parentActivityName=".SelectSeat"
-            android:screenOrientation="portrait"
             android:name=".PayNow"
-            android:label="@string/payforticket" />
+            android:label="@string/payforticket"
+            android:parentActivityName=".SelectSeat"
+            android:screenOrientation="portrait" />
         <activity
-            android:parentActivityName=".PayNow"
-            android:screenOrientation="portrait"
             android:name=".CreditCardPay"
-            android:label="@string/crecardDetails" />
-        <!-- Admin Activities -->
+            android:label="@string/crecardDetails"
+            android:parentActivityName=".PayNow"
+            android:screenOrientation="portrait" /> <!-- Admin Activities -->
         <activity
             android:name=".admin_pasengers"
             android:label="@string/admin_passengers_title"
-            android:parentActivityName=".admin_dashboard"/>
+            android:parentActivityName=".admin_dashboard" />
         <activity
             android:name=".admin_bookings"
             android:label="@string/admin_booking_title"
@@ -94,31 +86,23 @@
         <activity
             android:name=".admin_drivers"
             android:label="@string/admin_drivers_title"
-            android:parentActivityName=".admin_dashboard"
-
-            />
+            android:parentActivityName=".admin_dashboard" />
         <activity
             android:name=".admin_routes"
             android:label="@string/admin_routes_title"
             android:parentActivityName=".admin_dashboard" />
-
         <activity
             android:name=".admin_payments"
             android:label="@string/admin_payments_title"
             android:parentActivityName=".admin_dashboard" />
-
-        <activity android:name=".admin_settings"
-                  android:label="@string/admin_settings_title"
-                  android:parentActivityName=".admin_dashboard">
-        </activity>
-
-        <!-- Driver Activities -->
+        <activity
+            android:name=".admin_settings"
+            android:label="@string/admin_settings_title"
+            android:parentActivityName=".admin_dashboard"></activity> <!-- Driver Activities -->
         <activity
             android:name=".driver_dashboard"
             android:label="@string/driver_dashboard_title"
-            android:parentActivityName=""
-
-            />
+            android:parentActivityName="" />
         <activity
             android:name=".Add_route"
             android:label="@string/driver_add_route"
@@ -140,9 +124,9 @@
             android:label="@string/driver_update_route"
             android:parentActivityName=".My_route" /> <!-- Wecome Login Screen -->
         <activity
+            android:name=".welcome_spalsh"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:name=".welcome_spalsh"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -151,5 +135,11 @@
             </intent-filter>
         </activity>
     </application>
+
+    <supports-screens
+        android:largeScreens="true"
+        android:normalScreens="true"
+        android:smallScreens="true"
+        android:xlargeScreens="true" />
 
 </manifest>
