--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,26 +2,30 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.bussapp">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-
-
     <application
         android:allowBackup="true"
         android:icon="@drawable/icon"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".admin_add_route"
+        <activity android:name=".DriverDetails">
+            
+        </activity>
+        <activity
+            android:name=".admin_add_route"
             android:label="@string/admin_add_route"
-            android:parentActivityName=".admin_routes"
-
-            />
-
-        <!-- Login,Reset,Reg Activities -->
+            android:parentActivityName=".admin_routes" /> <!-- Login,Reset,Reg Activities -->
         <activity
             android:name=".user_login"
             android:label="@string/user_login_title"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar" >
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".user_password_reset"
             android:label="@string/user_passreset_title"
@@ -98,7 +102,7 @@
         <activity
             android:name=".admin_settings"
             android:label="@string/admin_settings_title"
-            android:parentActivityName=".admin_dashboard"></activity> <!-- Driver Activities -->
+            android:parentActivityName=".admin_dashboard" /> <!-- Driver Activities -->
         <activity
             android:name=".driver_dashboard"
             android:label="@string/driver_dashboard_title"
@@ -141,5 +145,7 @@
         android:normalScreens="true"
         android:smallScreens="true"
         android:xlargeScreens="true" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
